First web commit

--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="ASSO">
+
+    <title>HoT</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom Js -->
+    <script type="text/javascript" src="js/main.js"></script>
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+</head>
+
+<body>
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="col-lg-8">
+
+          <h1>HoT Integration</h1>
+
+          <button type="button" class="btn btn-info" onClick="refresh();">Update</button>
+
+      <div class="col-lg-4">
+          <h1 id="light-status">ON</h1>
+          <img class="featurette-image img-responsive pull-left" src="resources/lampON.png">
+      </div>
+    </div>
+      </div>
+    </div>
+</div>
+
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+</body>
+</html>
